--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,11 +1,11 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 27
+    compileSdkVersion 28
     defaultConfig {
         applicationId "com.jackiepenghe.www.classicbluetoothlibrary"
         minSdkVersion 18
-        targetSdkVersion 27
+        targetSdkVersion 28
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -21,15 +21,16 @@ android {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.1'
-    implementation 'com.android.support:appcompat-v7:27.1.1'
-    implementation 'com.android.support:design:27.1.1'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+    androidTestImplementation 'com.android.support.test:runner:1.0.2'
+    implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'com.android.support:design:28.0.0'
+    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation project(':classicbluetoothlibrary')
     //base库
-    implementation 'com.jackiepenghe:baselibrary:0.7.3'
+    implementation 'com.jackiepenghe:baselibrary:0.9.7'
     //权限库
-    implementation 'com.yanzhenjie:permission:2.0.0-rc4'
+    //noinspection GradleDependency
+    implementation 'com.yanzhenjie:permission:2.0.0-rc12'
     //RecyclerView适配器库
     implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.30'
 }
